# OllamaConnection

./: .env  pyproject.toml
