[project]
name = "pythonrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.5",
    "inngest>=0.5.13",
    "llama-index-core>=0.14.9",
    "llama-index-readers-file>=0.5.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
